# trf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: writing-tips.sh
src/: chat.rs  main.rs  tti.rs  tts.rs
src/scripts/: release.sh
tests/: chat.rs  tti.rs  tts.rs
