[package]
name = "trf"
version = "1.0.0"
edition = "2021"
authors = ["Rik Huijzer"]
license = "MIT"
description = "Multimodal AI in the terminal"
repository = "https://github.com/transformrs/trf"

[dependencies]
anyhow = "1"
clap = { version = "4.5.29", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
tracing = "0.1"
transformrs = "0.7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
tempfile = "3"
toml = "0.8"
